--- a/views/mail.hbs
+++ b/views/mail.hbs
@@ -1,6 +1,10 @@
 <head>
 	<style>
 
+		* {
+			line-height: 1.5;
+		}
+
 		body {
 			font-size: 14px;
 			font-family: sans-serif;
@@ -23,7 +27,7 @@
 		}
 
 		ul li {
-			padding: 5px 0px;
+			padding-bottom: 15px;
 		}
 
 		a {
@@ -58,6 +62,11 @@
     	opacity: .9;
 		}
 
+		.report-table-body .test-results tr:not(:first-child) > td {
+			border-top: 1px solid #EFEFEF;
+    	padding-top: 30px;
+		}
+
 		.report-table-footer td {
 			padding: 5px 15px;
 			font-size: 12px;
@@ -70,12 +79,19 @@
   		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 		}
 
+		.status {
+			padding: 3px 15px;
+			color: #fff;
+	    font-size: 10px;
+	    text-transform: uppercase;
+		}
+
 		.valid {
-			color: #61BF60;
+			background-color: #61BF60;
 		}
 
 		.invalid {
-			color: #E05252;
+	    background-color: #E05252;
 		}
 
 		.light {
@@ -90,16 +106,17 @@
 			padding: 0 20px;
 		}
 
+		.m-20 {
+			margin: 20px;
+		}
+
+		.header {
+	    border-top: 1px solid #EFEFEF;
+    	padding-top: 15px !important;
+		}
+
 	</style>
 </head>
-
-<!-- {{#each result}}
-{{#each this}}
-<tr><td>
-Request Url: {{{result.req.url}}} wefwef
-</td></tr>
-{{/each}}
-{{/each}} -->
 
 <table id="report-table-container" cellspacing="10" cellpadding="0">
 
@@ -110,24 +127,26 @@ Request Url: {{{result.req.url}}} wefwef
 					<td>
 						<table border="0" cellpadding="0" cellspacing="0" width="100%" id="">
 							<tr>
-								<td width="100%" align="left" class="-text">
-									Push details:
-								</td>
-								<td align="left" class="">
-									<strong>Date:</strong> 08/06/16 18:3718:00
-								</td>
-								<td align="left" class="">
-									<strong>Author:</strong> {{payload.pusher.name}}
-								</td>
-								<td align="left" class="">
-									<strong>Organization:</strong> {{payload.organization.login}}
+								<td width="100%" align="left" class="">
+									<strong>Push details:</strong>
 								</td>
 							</tr>
+
 							<tr>
-								<td colspan="4">Commits:</td>
+								<td class="header">
+									<ul class="commits">
+										<li><strong>Date:</strong> 08/06/16 18:3718:00</li>
+										<li><strong>Author:</strong> {{payload.pusher.name}}</li>
+										<li><strong>Organization:</strong> {{payload.organization.login}}</li>
+									</ul>
+								</td>
+							</tr>
+
+							<tr>
+								<td><strong>Commits:</strong></td>
 							</tr>
 							<tr>
-								<td colspan="4">
+								<td class="header">
 									<ul class="commits">
 									{{#payload.commits}}
 										<li><a href="{{url}}" target="_blank">{{author.username}} - {{message}} - {{moment timestamp format="DD/MM/YY HH:mm:ss"}}</a></li>
@@ -147,20 +166,20 @@ Request Url: {{{result.req.url}}} wefwef
 			<table width="100%" border="0" cellpadding="0" cellspacing="0" id="email-container" class="panel half-size">
 				<tr><!-- BODY // -->
 					<td>
-						<table border="0" cellpadding="0" cellspacing="0" width="100%" id="">
+						<table border="0" cellpadding="0" cellspacing="0" width="100%" class="test-results">
 							<tr>
 								<td align="left" class="">
-									Test Results:
+									<strong>Test Results:</strong>
 								</td>
 							</tr>
 							{{#result.[0]}}
 							<tr>
 								<td align="left" class="">
-									<strong>{{info.req.method}}</strong> - {{info.req.url}} - <strong class="{{#if validation.valid}}valid{{else}}invalid{{/if}}">{{#if validation.valid}}Valid Schema{{else}}Invalid Schema{{/if}}</strong>
+									<strong>{{info.req.method}}</strong> - {{info.req.url}} - <strong class="status {{#if validation.valid}}valid{{else}}invalid{{/if}}">{{#if validation.valid}}Valid Schema{{else}}Invalid Schema{{/if}}</strong>
 									<ul>
 										{{#if validation.errors}}<li><strong class="large">Errors:</strong></li>{{/if}}
 									{{#validation.errors}}
-										<li><i class="light">{{path}}</i><br><strong class="invalid">{{code}}</strong> - {{message}}</li>
+										<li><i class="light">{{path}}</i><br><strong class="status invalid">{{code}}</strong> - {{message}}</li>
 									{{/validation.errors}}
 									</ul>
 								</td>
