--- a/lib/views/mail.hbs
+++ b/lib/views/mail.hbs
@@ -263,7 +263,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" id="">
                             <tr>
                                 <td align="center" class="-text">
-                                    This email was sent to you automatically from <a href="hypertest.cloudoki.com">hypertest.cloudoki.com</a>
+                                    This email was sent to you automatically from <a href="https://hyper-test.cloudoki.com">hyper-test.cloudoki.com</a>
                                 </td>
                             </tr>
                         </table>
